--- a/config/services.yaml
+++ b/config/services.yaml
@@ -10,6 +10,8 @@ services:
     _defaults:
         autowire: true      # Automatically injects dependencies in your services.
         autoconfigure: true # Automatically registers your services as commands, event subscribers, etc.
+        bind: 
+            bool $isDebug: '%kernel.debug%' 
 
     # makes classes in src/ available to be used as services
     # this creates a service per class whose id is the fully-qualified class name
@@ -22,3 +24,11 @@ services:
 
     # add more service definitions when explicit configuration is needed
     # please note that last definitions always *replace* previous ones
+    
+  
+  # Przesyłanie zmiennej globalnej arguments = bind //patrz wyzej
+    App\Service\MarkdownHelper:
+        arguments:
+            $pZon: '1977'
+  #         $isDebug: '%kernel.debug%'
+        
