--- a/composer.json
+++ b/composer.json
@@ -11,6 +11,7 @@
         "doctrine/doctrine-migrations-bundle": "^3.2",
         "doctrine/orm": "^2.13",
         "knplabs/knp-markdown-bundle": "^1.10",
+        "knplabs/knp-time-bundle": "^1.20",
         "sensio/framework-extra-bundle": "^6.2",
         "sensiolabs/security-checker": "^6.0",
         "symfony/apache-pack": "^1.0",
