--- a/composer.json
+++ b/composer.json
@@ -14,6 +14,7 @@
         "knplabs/knp-time-bundle": "^1.20",
         "sensio/framework-extra-bundle": "^6.2",
         "sensiolabs/security-checker": "^6.0",
+        "stof/doctrine-extensions-bundle": "^1.7",
         "symfony/apache-pack": "^1.0",
         "symfony/asset": "5.4.*",
         "symfony/console": "5.4.*",
