--- a/.env
+++ b/.env
@@ -25,7 +25,8 @@ APP_SECRET=0591156f9a8dedc5f9c055f5bc59403a
 #
 # DATABASE_URL="sqlite:///%kernel.project_dir%/var/data.db"
 # DATABASE_URL="mysql://app:!ChangeMe!@127.0.0.1:3306/app?serverVersion=8&charset=utf8mb4"
-DATABASE_URL="mysql://pz:pz@127.0.0.1:3306/cauldron"
+#DATABASE_URL="mysql://pz:pz@127.0.0.1:3306/cauldron"
+DATABASE_URL="mysql://root:@127.0.0.1:3306/cauldron"
 #DATABASE_URL="mysql://pz:pz@127.0.0.1:3306/cauldron?serverVersion=5.7"
 # DATABASE_URL="postgresql://app:!ChangeMe!@127.0.0.1:5432/app?serverVersion=14&charset=utf8"
 ###< doctrine/doctrine-bundle ###
