--- a/composer.json
+++ b/composer.json
@@ -28,6 +28,7 @@
         "symfony/webpack-encore-bundle": "1.8",
         "symfony/yaml": "5.4.*",
         "twig/extra-bundle": "^2.12|^3.0",
+        "twig/string-extra": "^3.5",
         "twig/twig": "^2.12|^3.0"
     },
     "config": {
