chptr4.26 Pagination works

--- a/composer.json
+++ b/composer.json
@@ -7,11 +7,13 @@
         "php": ">=7.2.5",
         "ext-ctype": "*",
         "ext-iconv": "*",
+        "babdev/pagerfanta-bundle": "^3.7",
         "doctrine/doctrine-bundle": "^2.7",
         "doctrine/doctrine-migrations-bundle": "^3.2",
         "doctrine/orm": "^2.13",
         "knplabs/knp-markdown-bundle": "^1.10",
         "knplabs/knp-time-bundle": "^1.20",
+        "pagerfanta/doctrine-orm-adapter": "^3.7",
         "sensio/framework-extra-bundle": "^6.2",
         "sensiolabs/security-checker": "^6.0",
         "stof/doctrine-extensions-bundle": "^1.7",
