--- a/config/packages/security.yaml
+++ b/config/packages/security.yaml
@@ -23,6 +23,11 @@ security:
             custom_authenticator: App\Security\LoginFormAuthenticator
             logout: true
 
+            remember_me:
+                secret: '%kernel.secret%'
+                signature_properties: [password]
+                #always_remember_me: true
+
             # activate different ways to authenticate
             # https://symfony.com/doc/current/security.html#the-firewall
 
