--- a/config/packages/security.yaml
+++ b/config/packages/security.yaml
@@ -20,7 +20,12 @@ security:
         main:
             lazy: true
             provider: app_user_provider
-            custom_authenticator: App\Security\LoginFormAuthenticator
+            #custom_authenticator: App\Security\LoginFormAuthenticator
+            form_login:
+                login_path: app_login
+                check_path: app_login
+                username_parameter: email
+                password_parameter: password
             logout: true
 
             remember_me:
