--- a/config/packages/security.yaml
+++ b/config/packages/security.yaml
@@ -2,7 +2,7 @@ security:
     enable_authenticator_manager: true
     hide_user_not_found: false
     role_hierarchy:
-        ROLE_ADMIN: ['ROLE_COMMENT_ADMIN']
+        ROLE_ADMIN: [ROLE_COMMENT_ADMIN, ROLE_ALLOWED_TO_SWITCH]
    
 
     # https://symfony.com/doc/current/security.html#registering-the-user-hashing-passwords
@@ -31,6 +31,8 @@ security:
                 password_parameter: password
                 enable_csrf: true 
             logout: true
+
+            switch_user: true
 
             remember_me:
                 secret: '%kernel.secret%'
