--- a/.env
+++ b/.env
@@ -30,3 +30,9 @@ DATABASE_URL="mysql://root:@127.0.0.1:3306/cauldron"
 #DATABASE_URL="mysql://pz:pz@127.0.0.1:3306/cauldron?serverVersion=5.7"
 # DATABASE_URL="postgresql://app:!ChangeMe!@127.0.0.1:5432/app?serverVersion=14&charset=utf8"
 ###< doctrine/doctrine-bundle ###
+
+###> symfony/lock ###
+# Choose one of the stores below
+# postgresql+advisory://db_user:db_password@localhost/db_name
+LOCK_DSN=flock
+###< symfony/lock ###
