--- a/config/packages/security.yaml
+++ b/config/packages/security.yaml
@@ -34,10 +34,12 @@ security:
 
             switch_user: true
 
+            login_throttling: true
+
             remember_me:
                 secret: '%kernel.secret%'
                 signature_properties: [password]
-                #always_remember_me: true
+                always_remember_me: true
 
             # activate different ways to authenticate
             # https://symfony.com/doc/current/security.html#the-firewall
