--- a/composer.json
+++ b/composer.json
@@ -17,6 +17,8 @@
         "pagerfanta/doctrine-orm-adapter": "^3.7",
         "pagerfanta/twig": "^3.7",
         "phpdocumentor/reflection-docblock": "^5.3",
+        "scheb/2fa-bundle": "^5.13",
+        "scheb/2fa-totp": "^5.13",
         "sensio/framework-extra-bundle": "^6.2",
         "sensiolabs/security-checker": "^6.0",
         "stof/doctrine-extensions-bundle": "^1.7",
