--- a/composer.json
+++ b/composer.json
@@ -12,6 +12,7 @@
         "doctrine/doctrine-bundle": "^2.7",
         "doctrine/doctrine-migrations-bundle": "^3.2",
         "doctrine/orm": "^2.13",
+        "endroid/qr-code": "^4.6",
         "knplabs/knp-markdown-bundle": "^1.10",
         "knplabs/knp-time-bundle": "^1.20",
         "pagerfanta/doctrine-orm-adapter": "^3.7",
